# cambridge-asm-web

./: .editorconfig  .gitignore  .prettierignore  .prettierrc  Cargo.toml  JUSTFILE  LICENCE  LICENSE_MIT  README.md  build_wasm.sh  cambridge_asm_web.js  cambridge_asm_web_bg.wasm  dev.sh  eslint.config.js  index.css  index.html  index.js  package-lock.json  package.json  prod.py  prod.sh  serve.sh  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts  watch.py  worker.js
.github/workflows/: deploy.yml
_app/: version.json
_app/immutable/assets/: 0.DchplOOP.css  _layout.DiAYGGRE.css  _page.BbQnS1b9.css
_app/immutable/chunks/: B8Zkkvcw.js  ByNKlBod.js  CiOsrWgG.js  Ckv0r-W2.js  D4oMPtmk.js  DSvWHr4Q.js  DUZfX04-.js
_app/immutable/entry/: app.DJDJN1Ds.js  start.CVQUmlAj.js
_app/immutable/nodes/: 0.Bc7xrLii.js  1.Cc2Ht_SV.js  2.2czkQ9Za.js
_app/immutable/workers/: worker-SFFCSmWz.js
cambridge-asm-wasm/: Cargo.toml
cambridge-asm-wasm/src/: lib.rs
scripts/: build_wasm.sh
src/: App.svelte  app.css  app.html  fonts.css  lib.rs  main.ts
src-tauri/: tauri.conf.json
src/lib/: codes.ts  handler.ts  ipc.ts  media_query.ts  messages.ts  pasmworker.ts  polyfill.ts  stores.ts  waituntil.ts  worker.ts
src/lib/components/: Button.svelte  Editor.svelte  (+2 more)
src/routes/: +page.svelte
src/ui/: Buttons.svelte  Editable.svelte  Grid.svelte  Output.svelte  TextArea.svelte
wasm/: Cargo.toml
wasm/src/: exec.rs  io.rs  lib.rs
web/: index.html  index.ts  layout.scss  theme.scss  worker.ts
web/fonts/: fonts.css
web/sw/: sw.ts  tsconfig.json
(+6 files in other folders)
